# Rust

Basics/boxes/src/: main.rs
Basics/constants/src/: main.rs
Basics/custom-error/: Cargo.toml
Basics/custom-error/src/: main.rs
Basics/enums/src/: main.rs
Basics/hashmaps/src/: main.rs
Basics/hashsets/src/: main.rs
Basics/loops/src/: main.rs
Basics/options/src/: main.rs
Basics/result/src/: main.rs
Basics/structs/src/: main.rs
Basics/traits/src/: main.rs
Basics/variables/src/: main.rs
Data Structures/linked-lists/src/: main.rs
Data Structures/queue/src/: main.rs
Data Structures/stack/src/: main.rs
LMS/: .env  Cargo.toml  Pending Tasks.txt  Project Structure.txt  Sample Books.json
LMS/.sqlx/: query-797206feaf1260d9bbf4884a8bfbb9e631aeb509431b281a527df5dd21dc0ae6.json
LMS/src/: main.rs
LMS/src/database/: database_client.rs
LMS/src/handlers/: auth_handler.rs  books_handler.rs  mod.rs  user_handler.rs
LMS/src/models/: authors.rs  books.rs  custom_error.rs  genres.rs  loans.rs  mod.rs  publishers.rs  users.rs
LMS/src/repositories/: books_repository.rs  mod.rs  users_repository.rs
LMS/src/repositories/book_utilities/: create_book.rs  delete_book.rs  list_books.rs  mod.rs
LMS/src/repositories/user_utilities/: create_user.rs
LMS/src/utils/: book_utils.rs  mod.rs  user_utils.rs
Simple Programs/even-odd/: Cargo.toml
Simple Programs/even-odd/src/: main.rs
Simple Programs/http-parser/src/: main.rs
Simple Programs/recursive-factorial/: Cargo.toml
Simple Programs/recursive-factorial/src/: main.rs
(+3 files in other folders)
