[package]
name = "LMS"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenv = "0.15.0"
postgres = { version = "0.19.12", features = ["with-uuid-1"] }
uuid = {version = "1.22.0", features = ["v4"]}
native-tls = "0.2.18"
postgres-native-tls = "0.5.2"
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
